<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.test.loginapp.PasswordActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textSize="20dp"
        android:text="@string/password_txt"
        android:gravity="center"
        android:layout_marginTop="35dp"
        android:textStyle="bold"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_add"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:id="@+id/tx3"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tx3"
            android:id="@+id/password_add"
            android:inputType="textPassword"
            android:textColor="@color/textColor"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_confirm"
            android:textColor="@color/textColor"
            android:textSize="18dp"
            android:id="@+id/tx4"
            android:layout_alignParentLeft="true"
            android:textStyle="bold"
            android:layout_below="@+id/password_add"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tx4"
            android:id="@+id/password_confirm"
            android:inputType="textPassword"
            android:textColor="@color/textColor"
            />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_btn_label"
            android:textStyle="bold"
            android:layout_marginTop="35dp"
            android:id="@+id/start_button"
            android:background="@drawable/button_selecter"
            android:textColor="@color/textColor"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="75dp"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>

</LinearLayout>
